# econopet

./: .clang-format  .gitattributes  .gitignore  .gitmodules  40-8096-A.html  CMakeLists.txt  CMakePresets.json  NOTICE.md  README.md  build.sh  efx.bat  efx.sh  efx_map.bat  efx_map.sh  scratch.sh  setup.sh  sim.bat  sim.sh  term.sh  ut.sh
.clinerules/: c-conventions.md  colour-terminal-workflow.md  deep-analysis.md  incremental-build-test.md  plain-ascii.md
.devcontainer/: Dockerfile  devcontainer.json  download-roms.sh
.devcontainer/host/: README.md  debug-pico.ps1
.github/: copilot-instructions.md
.github/instructions/: commit-message.instructions.md  firmware.instructions.md  gateware.instructions.md  instruction.instructions.md  prgs.bas.instructions.md  prgs.c.instructions.md  prgs.instructions.md  prompt.instructions.md  skill.instructions.md
.github/skills/timing-analysis/: SKILL.md
.github/workflows/: gh-pages.yml
docs/: manufacturing.md  timing.md
docs/dev/: TPS5430-5V.mws  TPS5430-6V.mws  TPS5430.mws  boot.md  breakpoint.md  bup.md  datasheets.md  dvi.md  fpga.md  git.md  jlcpcb.mb  pico.md  roms.md  rp2040.md  site.md  tape-emulation.md  timing.md  todo.md  tools.md
docs/dev/PET/: assembly.md  books.md  bup.md  colourpet.md  compat.md  diagnostics.md  extensions.md  fpga.md  history.md  ieee.md  joystick.md  keyboard.md  killerpoke.md  memorymap-gen.csv  memorymap-ocr.csv  memorymap.md  ram.md  roms.md  sid.md  software.md  tape.md  test.md  video.md
docs/manual/build-an-econopet/: assembling-the-board.md  index.md  installing-the-firmware.md  ordering-parts-from-mouser.md  ordering-pcbs-from-jlcpcb.md
fw/: CMakeLists.txt  driver.c  driver.h  global.c  hw.h  main.c  pch.h  pet.c  pet.h  roms.h  term.c  util.h
fw/cmake/: AddRomHeader.cmake  BinToHeader.cmake  GitVersion.cmake  version.h.in
fw/fpga/: fpga.sh
fw/keymaps/: README.md  grus_pos.h  grus_sym.h  keymaps.sh
fw/menu/: menu.c  menu.h
fw/roms/: README.md  roms.sh
fw/sd/: sd.c  sd.h
fw/src/: CMakeLists.txt  breakpoint.c  breakpoint.h  driver.c  driver.h  fatal.c  fatal.h  global.c  global.h  hw.h  input.c  input.h  main.c  model.c  model.h  pch.h  pet.c  pet.h  reset.c  reset.h  system_state.c  system_state.h  tape.c  tape.h  tape_dir.c  tape_dir.h  term.c  term.h  term_inject.c  term_inject.h  tusb_config.h
fw/src/cbm/: filename.c  filename.h  petscii.c  petscii.h
fw/src/config/: config.c  config.h  config_setup.h
fw/src/diag/: mem.c  mem.h
fw/src/diag/log/: log.c  log.h
fw/src/display/: char_encoding.c  char_encoding.h  display.c  display.h  window.c  window.h
fw/src/display/dvi/: crtc.h  dvi.c  dvi.h  generate_tmds_table.py  tmds_encode.c  tmds_encode.h
fw/src/fpga/: bitstream.sh
fw/src/keymaps/: grus_sym.h
fw/src/menu/: menu.c  menu.h  menu_config.c  menu_config.h  window.c  window.h
fw/src/roms/: checksum.c  checksum.h  edit-4-80-n-60Hz.901474-03-hack.diff  roms.c  roms.h  roms.sh
fw/src/sd/: sd.c  sd.h
fw/src/ui/: cli.c  cli.h  console.c  console.h
fw/src/usb/: hid_app.c  keyboard.c  keyboard.h  keyscan.c  keyscan.h  keystate.c  keystate.h  msc_app.c  usb.c  usb.h
fw/src/video/: tmds_encode.S  tmds_encode.c  tmds_encode.h  tmds_encode_font_2bpp.S  tmds_encode_font_2bpp.c  tmds_encode_font_2bpp.h  tmds_table.h  tmds_tables.h  video.c  video.h
fw/targets/rp2040/: CMakeLists.txt
fw/test/: CMakeLists.txt  breakpoint_test.c  breakpoint_test.h  char_encoding_test.c  char_encoding_test.h  config_parser_test.c  config_parser_test.h  config_test.c  config_test.h  crtc_test.c  crtc_test.h  keyscan_test.c  keyscan_test.h  keystate_test.c  keystate_test.h  log_test.c  log_test.h  main.c  mem.c  mem.h  menu_test.c  menu_test.h  mock.c  mock.h  options.h  petscii_test.c  petscii_test.h  sd.c  tape_dir_test.c  tape_dir_test.h  window_test.c  window_test.h
fw/test/data/: config.yaml
fw/usb/: cdc_app.c  hid_app.c  keyboard.c  keyboard.h  msc_app.c  usb.c
fw/video/: font.h  video.c  video.h
gw/: CMakeLists.txt  efx.sh
gw/EconoPET/: EconoPET.peri.xml  EconoPET.sdc  EconoPET.xml
gw/EconoPET/sim/: CMakeLists.txt  address_decoding_tb.sv  arbiter_tb.sv  assert.svh  bram_tb.sv  breakpoint_tb.sv  clock_gen.sv  cpu_data_mux_tb.sv  keyboard_tb.sv  memory_map_tb.sv  mock_bus.sv  mock_cpu.sv  mock_ram.sv  mock_sram.sv  mock_sram_tb.sv  mock_system.sv  open_bus_tb.sv  ram_tb.sv  register_file_tb.sv  scratch.sv  sim.sv  spi1_driver.sv  spi1_tb.sv  spi_driver.sv  spi_tb.sv  stopwatch.sv  system_tb.sv  tb.svh  timing_tb.sv  top_tb.sv  video_crtc_reg_tb.sv  video_crtc_tb.sv  video_tb.sv  wb_driver.sv  wb_mux_tb.sv  wbc_mux_tb.sv  wbp_mux_tb.sv
gw/EconoPET/src/: address_decoding.sv  arbiter.sv  audio.sv  bram.sv  breakpoint.sv  common_pkg.sv  common_pkg.svh  cpu.sv  cpu_data_mux.sv  delay.sv  edge_detect.sv  io.sv  keyboard.sv  main.sv  open_bus.sv  ram.sv  ram2.sv  register_file.sv  spi.sv  spi1_controller.sv  sync2.sv  sync2_edge_detect.sv  system.sv  timing.sv  top.sv  video.sv  video_crtc.sv  video_crtc_reg.sv  video_dotgen.sv  vsync.sv  wb_decode.sv  wb_demux.sv  wb_mux.sv  wbc_mux.sv  wbp_mux.sv
gw/EconoPET/src/spi/: spi.sv  spi1.sv
gw/EconoPET/src/utils/: edge_detect.sv  sync2.sv  sync2_edge.sv
gw/EconoPET/work_sim/: timing_grant.gtkw_filter
hw/Mainboard/: MCU.kicad_sch
hw/libraries/Symbols/: EconoPET.kicad_sym
hw/rev-a/kicad/: CASS.kicad_sch  Mainboard.kicad_sch
hw/rev-a/production/: bom.csv  filter_for_jlcpcb.py  jlcpcb-rev-a-bom.csv  jlcpcb-rev-a-cpl.csv  netlist.ipc  positions.csv
prgs/: CMakeLists.txt
prgs/bp/: CMakeLists.txt  bp.c
prgs/open-bus/: CMakeLists.txt  open-bus.c
prgs/reload/: CMakeLists.txt  reload.bas
rom/: CMakeLists.txt  Makefile  m.sh
rom/src/: main.s  pet.cfg
roms/: CMakeLists.txt
sdcard/: CMakeLists.txt  CONFIG-YAML.md  README.md  bootloader.uf2  config.yaml
sdcard/prgs/: README.md
sdcard/ukm/: README.md
site/: Caddyfile  README.md  mkdocs.yml  package-lock.json  package.json
site/static/: 40-8096-A.html  index.html
tools/: rom-detector.ps1
tools/lcsc-import/: lcsc-import.sh  setup.sh
(+137 files in other folders)
